[gd_scene load_steps=6 format=3 uid="uid://mq3lgncyb3cu"]

[ext_resource type="Script" path="res://bridges/scenes/tutorial_info.gd" id="1_8xlim"]
[ext_resource type="PackedScene" uid="uid://6di2l5yn01qd" path="res://bridges/scenes/spiderl_tutorial.tscn" id="1_o8wju"]
[ext_resource type="PackedScene" uid="uid://bsiv4b8ihdf34" path="res://bridges/scenes/squirrel_tutorial.tscn" id="2_aadnx"]
[ext_resource type="PackedScene" uid="uid://bp286phfoqyt1" path="res://bridges/scenes/snake_tutorial.tscn" id="3_2lfgv"]
[ext_resource type="PackedScene" uid="uid://kckgnp56pvqf" path="res://bridges/scenes/deer_tutorial.tscn" id="4_i4jwe"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8xlim")

[node name="Spider_Tutorial" parent="." instance=ExtResource("1_o8wju")]
visible = false
layout_mode = 1

[node name="Squirrel_Tutorial" parent="." instance=ExtResource("2_aadnx")]
visible = false
layout_mode = 1

[node name="Snake_Tutorial" parent="." instance=ExtResource("3_2lfgv")]
visible = false
layout_mode = 1

[node name="Deer_Tutorial" parent="." instance=ExtResource("4_i4jwe")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "x"

[connection signal="pressed" from="Spider_Tutorial/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Next_Button" to="." method="_on_spider_button_pressed"]
[connection signal="pressed" from="Squirrel_Tutorial/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Next_Button" to="." method="_on_squirrel_button_pressed"]
[connection signal="pressed" from="Snake_Tutorial/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Next_Button" to="." method="_on_snake_button_pressed"]
[connection signal="pressed" from="Deer_Tutorial/PanelContainer2/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Next_Button" to="." method="_on_deer_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]

[editable path="Spider_Tutorial"]
[editable path="Squirrel_Tutorial"]
[editable path="Snake_Tutorial"]
[editable path="Deer_Tutorial"]
